added mesh interpolation example

--- a/doc/conf.py.in
+++ b/doc/conf.py.in
@@ -69,7 +69,7 @@ extensions = ['sphinx.ext.autodoc',
 extensions += [dep.replace('-', '.') for dep in deps]
 
 # Get mathjax from GIMLi server (public one is very slow)
-mathjax_path = "http://www.pygimli.org/mathjax/MathJax.js?config=TeX-AMS_HTML"
+mathjax_path = "http://www.pygimli.org/mathjax/MathJax.js?config=TeX-AMS-MML_HTMLorMML"
 
 # Add any paths that contain templates here, relative to this directory.
 templates_path = ['@SPHINX_SRC_DIR@/doc/_templates']
