remove polytools package .. fix regionmarker scaling

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -175,7 +175,7 @@ ENDIF(WIN32)
 # Check for python stuff
 ################################################################################
 
-set(Python_ADDITIONAL_VERSIONS 2.7 3.3 3.2 3.4)
+set(Python_ADDITIONAL_VERSIONS 3.4 3.3 3.2 2.7) # need better test for pyexe version
 find_package(PythonInterp)
 if (WIN32)
 	get_filename_component(PYTHONPATH "${PYTHON_EXECUTABLE}" PATH )
