added more doctests

--- a/python/tests/setup.cfg
+++ b/python/tests/setup.cfg
@@ -2,4 +2,4 @@
 # More information: http://www.pytest.org
 [pytest]
 norecursedirs = *gui*
-addopts = -v --color=yes --doctest-modules -r sxX
+addopts = -v -rsxX --color=yes --doctest-modules --durations=5
