--- a/doc/conf.py.in
+++ b/doc/conf.py.in
@@ -213,7 +213,7 @@ html_favicon = '@SPHINX_SRC_DIR@/doc/_static/G.ico'
 
 # If not '', a 'Last updated on:' timestamp is inserted at every page bottom,
 # using the given strftime format.
-html_last_updated_fmt = '%b %d, %Y with ' + version
+html_last_updated_fmt = '%b %d, %Y'# + ' with ' + version
 
 # If true, SmartyPants will be used to convert quotes and dashes to
 # typographically correct entities.
