--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -1,48 +1,53 @@
-
 if (DOXYGEN_FOUND)
-    set(DOXYGEN_BUILD_DIR "${CMAKE_CURRENT_BINARY_DIR}/doxygen")
-    configure_file("${CMAKE_CURRENT_SOURCE_DIR}/doxygen/doxyfile.in"
-                    ${DOXYGEN_BUILD_DIR}/doxyfile)
-    add_custom_target(doxygen
-        "${DOXYGEN_EXECUTABLE}"
-        WORKING_DIRECTORY "${DOXYGEN_BUILD_DIR}"
-        COMMENT "Generating API documentation with doxygen" VERBATIM)
+    set( DOXYGEN_BUILD_DIR    ${CMAKE_CURRENT_BINARY_DIR}/doxygen )
+    set( DOXYFILE_IN          ${CMAKE_CURRENT_SOURCE_DIR}/doxygen/doxyfile.in )
+    set( DOXYFILE             ${DOXYGEN_BUILD_DIR}/doxyfile )
+    set( DOXY_HTML_INDEX_FILE ${DOXYGEN_BUILD_DIR}/html/index.html )
+    set( DOXY_TAG_FILE        ${DOXYGEN_BUILD_DIR}/gimli.tag )
+    
+    configure_file(${DOXYFILE_IN} ${DOXYFILE})
 
-    add_dependencies(doxygen gimli)
+    # perform doxygen once or if DOXYFILE_IN or libgimli has been changed
+    add_custom_command(
+        OUTPUT 
+            ${DOXY_TAG_FILE}
+        COMMAND 
+            ${DOXYGEN_EXECUTABLE} ${DOXYFILE}
+        WORKING_DIRECTORY 
+            ${DOXYGEN_BUILD_DIR}
+        COMMENT 
+            "Generating gimli html API documentation with doxygen" 
+        DEPENDS 
+            gimli ${DOXYFILE} ${DOXYFILE_IN} 
+    )
+    
+    add_custom_target(doxygen ALL 
+        DEPENDS ${DOXY_TAG_FILE}
+    )
 endif()
 
-
-set(SPHINX_SRC_DIR "${CMAKE_SOURCE_DIR}")
-
-# configured documentation tools and intermediate build results
-set(SPHINX_BINARY_BUILD_DIR "${CMAKE_CURRENT_BINARY_DIR}/_build")
-
-# HERE we excpect our rst. either copied or the original
-set(SPHINX_SRCBUILD_DIR "${SPHINX_BINARY_BUILD_DIR}")
-
-# Sphinx cache with pickled ReST documents
-set(SPHINX_CACHE_DIR "${CMAKE_CURRENT_BINARY_DIR}/_doctrees")
-
-# HTML output directory
-set(SPHINX_HTML_DIR "${CMAKE_CURRENT_BINARY_DIR}/html")
-
-# PDF output directory
-set(SPHINX_PDF_DIR "${CMAKE_CURRENT_BINARY_DIR}/pdf")
+set( SPHINX_SRC_DIR         ${CMAKE_SOURCE_DIR}) # configured documentation tools and intermediate build results
+set( SPHINX_BUILD_DIR       ${CMAKE_CURRENT_BINARY_DIR}/_build) # HERE we export our rst. either copied or the original
+set( SPHINX_SRCBUILD_DIR    ${SPHINX_BUILD_DIR} ) # Sphinx cache with pickled ReST documents
+set( SPHINX_CACHE_DIR       ${CMAKE_CURRENT_BINARY_DIR}/_doctrees) # HTML output directory
+set( SPHINX_HTML_DIR        ${CMAKE_CURRENT_BINARY_DIR}/html) # PDF output directory
+set( SPHINX_PDF_DIR         ${CMAKE_CURRENT_BINARY_DIR}/pdf)
 
 configure_file(
      "${SPHINX_SRC_DIR}/doc/conf.py.in"
-     "${SPHINX_BINARY_BUILD_DIR}/conf.py"
+     "${SPHINX_BUILD_DIR}/conf.py"
      @ONLY)
 
 configure_file(
      "${SPHINX_SRC_DIR}/doc/sidebar_gallery.py.in"
-     "${SPHINX_BINARY_BUILD_DIR}/sidebar_gallery.py"
+     "${SPHINX_BUILD_DIR}/sidebar_gallery.py"
      @ONLY)
+
 # this will ONLY cover files in the CMAKE_CURRENT_SOURCE_DIR .. maybee a cmake bug check with cmake 3
 # we collect the RSTFILES in main path
 # file(GLOB_RECURSE RSTFILES RELATIVE ${CMAKE_SOURCE_DIR} "*.rst")
 
-ADD_CUSTOM_TARGET(sphinx_check_sources ALL)
+add_custom_target(sphinx_check_sources ALL)
 
 foreach(file ${RSTFILES})
     add_custom_command(
@@ -74,15 +79,19 @@ add_custom_target(sphinxapi
         cmake -E copy_if_different ${SPHINX_SRC_DIR}/doc/apigen.py ${SPHINX_SRCBUILD_DIR} &&
         cmake -E copy_if_different ${SPHINX_SRC_DIR}/doc/build_api.py ${SPHINX_SRCBUILD_DIR} &&
         python ${SPHINX_SRCBUILD_DIR}/build_api.py
-    COMMENT "Building pygimli api doc")
+    COMMENT 
+        "Building pygimli api doc"
+    DEPENDS 
+        doxygen
+)
 
-add_custom_target(sphinxpdf
-    ALL
+add_custom_target(sphinxpdf ALL
+    COMMAND
         ${SPHINX_EXECUTABLE}
         -T
         -q
         -b latex
-        -c "${SPHINX_BINARY_BUILD_DIR}"
+        -c "${SPHINX_BUILD_DIR}"
         -d "${SPHINX_CACHE_DIR}/pdf"
         "${SPHINX_SRCBUILD_DIR}"
         "${SPHINX_PDF_DIR}" &&
@@ -92,49 +101,33 @@ add_custom_target(sphinxpdf
         "Building PDF documentation with sphinx"
     DEPENDS
         sphinx_check_sources
+        sphinxapi
 )
 
-ADD_CUSTOM_TARGET(sphinxhtml)
-#add_custom_target(sphinxhtml
-add_custom_command(
+add_custom_target(sphinxhtml ALL
     COMMAND
         cmake -E copy_directory ${DOXYGEN_BUILD_DIR} ${SPHINX_HTML_DIR}/doc/gimliapi
     COMMAND
         ${SPHINX_EXECUTABLE}
         -T
         -b html
-        -c "${SPHINX_BINARY_BUILD_DIR}"
+        -c "${SPHINX_BUILD_DIR}"
         -d "${SPHINX_CACHE_DIR}/html"
         "${SPHINX_SRCBUILD_DIR}"
         "${SPHINX_HTML_DIR}"
     COMMENT
         "Building HTML documentation with sphinx"
-    TARGET
-        sphinxhtml
+    DEPENDS
+        sphinx_check_sources
+        sphinxapi
 )
-
-#add_dependencies(sphinx pygimli)
-#add_dependencies(sphinx doxygen)
-#add_dependencies(sphinx sphinx_check_sources)
 
 add_custom_target(doc
     COMMENT
         "Building HTML, API and PDF Documentation"
     DEPENDS
-        sphinx_check_sources
-        doxygen
-        sphinxapi
         sphinxhtml
         sphinxpdf
 )
-#
-# add_custom_target(sphinxdoc
-#     ALL
-#         sphinx
-#     DEPENDS doxygen
-# )
-# add_dependencies(doc sphinxdoc)
-#add_dependencies(doc doxygen)
-
 
 
