--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -222,15 +222,30 @@ else()
     find_package(Boost 1.46.0 COMPONENTS python)
 endif()
 
-
 if (NOT CASTER)
     set(CASTER "gccxml")
+
+    if (CMAKE_COMPILER_IS_GNUCC)
+        string(REGEX MATCHALL "[0-9]+" GCC_VERSION_COMPONENTS ${CMAKE_CXX_COMPILER_VERSION})
+        list(GET GCC_VERSION_COMPONENTS 0 GCC_MAJOR)
+        list(GET GCC_VERSION_COMPONENTS 1 GCC_MINOR)
+
+        if (${GCC_MAJOR} EQUAL 5)
+            message(STATUS "Found gcc version above 5: choosing castxml")
+            set(CASTER "castxml")
+        endif()
+            
+    endif()
 endif()
 
 if (CASTER STREQUAL "gccxml")
     find_or_build_package(gccxml gccxml)
     set(CASTER_EXECUTABLE ${GCCXML_EXECUTABLE})
 else()
+    find_program(CLANG clang REQUIRED)
+    find_program(CLANGXX clang++ REQUIRED)
+    find_package(LLVM REQUIRED)
+
     find_or_build_package(castxml castxml)
     set(CASTER_EXECUTABLE ${CASTXML_EXECUTABLE})
 endif()
@@ -244,7 +259,6 @@ if (PYTHON_EXECUTABLE AND PYTHONLIBS_FOUND
     AND Boost_PYTHON_LIBRARIES AND numpy_FOUND)
     set (PYGIMLI 1)
     message (STATUS "pygimli can be build.")
-    message (STATUS "boost_python:" ${Boost_PYTHON_LIBRARIES})
 else()
     message(STATUS "PYTHON_EXECUTABLE: ${PYTHON_EXECUTABLE}" )
     message(STATUS "PYTHONLIBS_FOUND: ${PYTHONLIBS_FOUND}" )
@@ -370,6 +384,25 @@ endif(LIBGIMLI_BUILD_TESTS)
 add_subdirectory(src)
 add_subdirectory(tests EXCLUDE_FROM_ALL)
 add_subdirectory(apps)
+
+if (PYTHON_EXECUTABLE AND PYTHONLIBS_FOUND 
+    AND (GCCXML_FOUND OR CASTXML_FOUND)
+    AND PYGCCXML_FOUND AND PYPLUSPLUS_FOUND
+    AND Boost_PYTHON_LIBRARIES AND numpy_FOUND)
+    set (PYGIMLI 1)
+    message (STATUS "pygimli can be build.")
+else()
+    message(STATUS "PYTHON_EXECUTABLE: ${PYTHON_EXECUTABLE}" )
+    message(STATUS "PYTHONLIBS_FOUND: ${PYTHONLIBS_FOUND}" )
+    message(STATUS "XML Caster: ${CASTER_EXECUTABLE}")
+    message(STATUS "PYPLUSPLUS_FOUND: ${PYPLUSPLUS_FOUND}" )
+    message(STATUS "Boost_PYTHON_LIBRARIES: ${Boost_PYTHON_LIBRARIES}" )
+    message(STATUS "numpy_FOUND: ${numpy_FOUND}" )
+
+    message (STATUS "pygimli cannot be build due to some missing packages. 
+Check above for python, gccxml|castxml, pygccxml, pyplusplus, boost_python, numpy")
+    
+endif ()
 
 if (PYGIMLI)
 #     set( PYGIMLI_SOURCE_DIR ${CMAKE_SOURCE_DIR}/python/pygimli )
