--- a/doc/conf.py.in
+++ b/doc/conf.py.in
@@ -311,8 +311,11 @@ if sphinx.__version__.startswith('1.3'):
 
 # Grouping the document tree into LaTeX files. List of tuples
 # (source start file, target name, title, author, documentclass [howto/manual]).
-latex_documents = [('doc/index', 'gimli.tex', 'GIMLi Documentation',
-                    'GIMLi Group', 'manual')]
+latex_documents = [('doc/index', 
+                    'gimli.tex',
+                    'GIMLi Documentation',
+                    'GIMLi Group', 
+                    'manual')]
 
 try:
     pngmath_latex_preamble  # check whether this is already defined
